<resources>
    <string name="app_name">Lankawe PartTime</string>
    <string name="title_activity_welcome_screen">Lankawe PartTime</string>
    <string name="title_activity_employee_login">EmployeeLoginActivity</string>
    <string name="title_activity_employee_home">EmployeeHomeActivity</string>
    <string name="title_activity_employer_home">EmployerHomeActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">Employee User Name</string>
    <string name="password">Password</string>
    <string name="new_user_sign_up_here">New User? Sign up here</string>
    <string name="select_your_role_to_continue">Select Your Role to Continue</string>
    <string name="employee">Employee</string>
    <string name="employer">Employer</string>
    <string name="title_activity_employer_login">EmployerLoginActivity</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="create_a_user_name">Create a User Name</string>
    <string name="your_name_here">Your Name here</string>
    <string name="create_a_password">Create a Password</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="your_mobile_number">Your Mobile Number</string>
    <string name="already_signed_up_click_to_login">Already Signed Up?Click to Login</string>
    <string name="button">Sign In</string>
    <string name="employer_user_name">Employer User Name</string>
    <string name="company_name">Company Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="company_address">Company Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="do_you_need_extra_qualifications_for_this_job">Do you need extra Qualifications for this job?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="employeeoccupation">Your Occupation</string>
    <string name="editPassword">Your Age </string>
    <string name="edit_company_name">Edit Your Company Name</string>
    <string name="edit_email">Edit Your Email </string>
    <string name="Edit_save_employer">Save </string>
    <string name="edit_emplouee_username">Edit Your User Name </string>
    <string name="edit_emplouee_email">Edit Your Email </string>
    <string name="edit_emplouee_mobile_number">Edit your Mobile Number </string>
    <string name="edit_save_employee">Save</string>
    <string name="appvalidation">ValidationTutorial</string>
    <string name="user_nameVal">Enter Your User Name</string>
    <string name="User_mailVal">Enter Correct Email</string>
    <string name="User_phonenbrVal">Enter Correct Mobile Number</string>
    <string name="User_passwordVal">Enter Password(more than 8 characters , contain numbers and symbols)</string>
    <string name="User_ConfirmationpassVal">Password Do Not match</string>

    <string name="user_companynameVal">Enter Your Company Name</string>
    <string name="user_companyEmailVal">Enter Your Company Email</string>
    <string name="title_activity_tab_main">TabMainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab_test">TabTestActivity</string>


</resources>
